--- a/public/style.css
+++ b/public/style.css
@@ -22,3 +22,13 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
