--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@
 } */
 body {
 	font-family: Roboto, Helvetica, Arial, sans-serif;
+	background-color: #327d41;
 }
 
 a {
@@ -33,10 +34,57 @@ form div {
 	width: 1px;
 }
 
+/* === Transactions Component === */
+
 .pieChart {
+	background-color: white;
 	border-radius: 5px;
 	border: 2px solid #7577741c;
-	padding: 20px;
-	width: 50vw;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	margin: 5px;
+	padding: 10px;
+	width: 36vw;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.transactionsTable {
+	width: 73vw;
+	border-radius: 5px;
+	border: 2px solid #7577741c;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.chartsAndTables {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-content: center;
+	justify-content: center;
+}
+
+.transactionsComponent {
+	text-align: center;
+	margin: 10px;
+	border-radius: 5px;
+	background-color: #C8AD55;
+	left: 150px;
+	/* padding-top: 30px;
+	padding-bottom: 30px; */
+}
+
+/* NavBar Component */
+
+.navbar {
+	color: #f5deb3;
+	/* background-color: #f5deb3; */
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	width: 125px;
+}
+
+.routes {
+	position: relative;
+	left: 150px;
+	top: 0px;
 }
