--- a/public/style.css
+++ b/public/style.css
@@ -67,8 +67,25 @@ form div {
 	border-radius: 5px;
 	background-color: #c8ad55;
 	left: 150px;
-	/* padding-top: 30px;
-	padding-bottom: 30px; */
+	padding-bottom: 30px;
+	color: white;
+}
+
+/* Inactive tab */
+.transactionsTabs {
+	background-color: white;
+	color: #c8ad55;
+}
+.transactionsTabs li.nav-item > button.nav-link:hover {
+	background-color: #c8ad558a;
+}
+
+/* Active tab */
+.transactionsTabs li.nav-item > button.nav-link.active,
+.transactionsTabs li.nav-item > button.nav-link.active:hover,
+.transactionsTabs li.nav-item > button.nav-link.active:focus {
+	background-color: #c8ad55;
+	color: white;
 }
 
 /* NavBar Component */
@@ -91,5 +108,37 @@ a {
 }
 
 .landing {
-	background-image: 'https://www.pinclipart.com/picdir/big/567-5679724_white-blob-transparent-clipart.png';
+	display: flex;
+	background-image: url('https://www.pngall.com/wp-content/uploads/4/Falling-Gold-Coin-Transparent.png');
+	color: white;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	height: 80vw;
+}
+
+.landing a {
+	color:white;
+	background-color: #c8ad55;
+	margin: 10pt;
+	font-size: 15px;
+	flex-direction: row;
+}
+
+.col-s6 {
+	display: flex;
+	flex-direction: column;
+	height: 40vw;
+	align-items: center;
+	justify-content: center;
+	font-size: 20px;
+}
+
+.accountsComponent {
+	text-align: center;
+	margin: 10px;
+	border-radius: 5px;
+	width: 24rem;
+	background-color: #c8ad55;
+	color: white;
 }
