--- a/public/style.css
+++ b/public/style.css
@@ -42,12 +42,13 @@ form div {
 	border: 2px solid #7577741c;
 	margin: 5px;
 	padding: 10px;
-	width: 36vw;
+	width: 42.5vw;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	color: black;
 }
 
 .transactionsTable {
-	width: 73vw;
+	width: 86vw;
 	border-radius: 5px;
 	border: 2px solid #7577741c;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -103,23 +104,27 @@ a {
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: flex-start;
-	padding-top: 0.5rem;
-	padding-bottom: 0.5rem;
+	padding-top: 0.5vw;
+	padding-bottom: 0.5vw;
+	width: 100vw;
+	font-size: 8vw;
 }
 
 .landing {
 	display: flex;
-	background: url('https://www.pngall.com/wp-content/uploads/4/Falling-Gold-Coin-Transparent.png') repeat;
+	background: url('https://www.pngall.com/wp-content/uploads/4/Falling-Gold-Coin-Transparent.png')
+		repeat;
 	background-position: center;
+	background-size: 700px 700px;
 	color: white;
 	text-align: center;
-	align-items: center;
+	align-content: center;
 	justify-content: center;
 	height: 80vw;
 }
 
 .landing a {
-	color:white;
+	color: white;
 	background-color: #c8ad55;
 	margin: 10pt;
 	font-size: 15px;
@@ -135,6 +140,20 @@ a {
 	font-size: 20px;
 }
 
+.authComponent {
+	background: url('https://www.pngall.com/wp-content/uploads/4/Falling-Gold-Coin-Transparent.png')
+		repeat;
+
+	background-size: 700px 700px;
+	height: 89vh;
+	text-align: center;
+	font-weight: bolder;
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	font-size: larger;
+}
+
 .accountsComponent {
 	text-align: center;
 	margin: 10px;
@@ -142,4 +161,87 @@ a {
 	width: 24rem;
 	background-color: #c8ad55;
 	color: white;
+}
+
+@media screen and (max-width: 850px) {
+	/* transactions component */
+	.pieChart {
+		background-color: white;
+		border-radius: 5px;
+		border: 2px solid #7577741c;
+		margin: 5px;
+		padding: 10px;
+		width: 85vw;
+		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	}
+
+	.transactionsTable {
+		width: 85vw;
+		border-radius: 5px;
+		border: 2px solid #7577741c;
+		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	}
+
+	.chartsAndTables {
+		display: flex;
+		flex-wrap: wrap;
+		flex-direction: row;
+		align-content: center;
+		justify-content: center;
+	}
+
+	.transactionsComponent {
+		text-align: center;
+		margin: 10px;
+		border-radius: 5px;
+		background-color: #c8ad55;
+		left: 150px;
+		font-size: 4vw;
+	}
+
+	/* accounts component */
+	.accountsComponent {
+		text-align: center;
+		margin: 10px;
+		border-radius: 5px;
+		width: 90vw;
+		background-color: #c8ad55;
+		color: white;
+		font-size: 4vw;
+	}
+
+	.accordion-body {
+		padding-left: 0vh;
+		padding-right: 0vh;
+	}
+
+	.accordion-body > p {
+		margin-bottom: 0vw;
+		color: black;
+	}
+
+	.material-icons {
+		margin: 0px;
+	}
+
+	/* landing component */
+	.landing {
+		background-size: 325px 325px;
+		height: 70vh;
+	}
+
+	/* authComponent */
+	.authComponent {
+		background: url('https://www.pngall.com/wp-content/uploads/4/Falling-Gold-Coin-Transparent.png')
+			repeat;
+		background-size: 222px 222px;
+		height: 70vh;
+		flex-direction: column;
+		text-align: center;
+		font-weight: bolder;
+		display: flex;
+		align-content: flex-start;
+		justify-content: flex-start;
+		font-size: larger;
+	}
 }
