--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 table,
 th,
 td {
-	border: 1px solid black;
+	border: 1px solid rgb(255, 255, 255);
 	width: 10%;
 	text-align: center;
 }
@@ -14,7 +14,10 @@ td {
 }
 .flex {
 	display: flex;
-	align-items: flex-start;
+	justify-content: space-evenly;
+}
+.modalEdit{
+font-family: monospace;
 }
 
 /* body {
